--- a/templates/warningeditor.html
+++ b/templates/warningeditor.html
@@ -1,83 +1,119 @@
 <div style="width: 100%;height: 100%;">
-    <div
-    style="
-      width: 50%;
-      position: absolute;
-      left: 0;
-      overflow-y: scroll;
-      height: 100%;
-    "
-  >
-    <h3>Announcement Type:</h3>
-    <select id="type">
-      <option value="standard">Standard</option>
-      <option value="airforce">Air Force</option>
-    </select>
-    <h3>Options:</h3>
-    <div id="options">
-      Text Color:<input type="color" name="TextColor" value="#FFFFFF" /><br />
-      Border Color:<input type="color" name="BorderColor" value="#000000" /><br />
-    </div>
-    <button id="warninggenbutton" style="width: 100%">Generate Warning</button>
-  </div>
-  <div style="width: 50%; position: absolute; right: 0; height: 100%">
-    <textarea
-      id="warningtextdisplay"
-      style="width: 100%; height: 94%; resize: none"
-      placeholder="this is where the code for your announcement will show."
-    >
-  </textarea
-    >
-    <button
-      style="width: 50%; height: 5%"
-      onclick="navigator.clipboard.writeText(document.getElementById('warningtextdisplay').value);"
-    >
-      Copy</button
-    ><button
-      style="width: 50%; height: 5%"
-      onclick="Briefing(JSON.parse(document.getElementById('warningtextdisplay').value))"
-    >
-      Preview
-    </button>
-  </div>
-  <script>
-  
-    warningobject = {};
-    document.getElementById("type").addEventListener("change", function () {
-    introptions = document.getElementById("options");
-    options={
-    "standard":`Stripes:<input type="checkbox" name="Stripes"><br>
-<input type="text" name="Emblem" placeholder="Path to your emblem">
-Action Color:<input type="color" name="ActionColor" value="#DFFF00"/>
-<input type="text" name="Action" placeholder="content of Highlighted Text">
-<input type="text" name="Message" placeholder="Message (lowest line)">`,
-    "airforce":""  
-    }
-    try {
-      introoptions.innerHTML = options[this.value]  
-    } catch (error) {
-      introptions.innerHTML = "Error";
-    }
-  });
-    document.getElementById("warninggenbutton").onclick = function () {
-      //build a list of the inputs and sort them into the object
-      optionvalues = Array.prototype.slice.call(document.getElementById("briefingoptions").getElementsByTagName("input")).concat(Array.prototype.slice.call(document.getElementById("briefingoptions").getElementsByTagName("textarea")));
-      
-      optionvalues.forEach((element) => {
-        try {
-          warningobject[element.name] = JSON.parse(element.value);
-        } catch (error) {
-          warningobject[element.name] = element.value;
-        }
-      });
-      document.getElementById("brieftextdisplay").value = JSON.stringify(
-        warningobject,
-        null,
-        3
-      );
-    };
-  </script>
-  
-  </div>
-  
+  <div
+  style="
+    width: 50%;
+    position: absolute;
+    left: 0;
+    overflow-y: scroll;
+    height: 100%;
+  "
+>
+  <h3>Announcement Type:</h3>
+  <select id="type">
+    <option value="standard">Standard</option>
+    <option value="airforce">Air Force</option>
+  </select>
+  <h3>Options:</h3>
+  <div id="options">
+    Stripes:<input type="checkbox" id="stripescheckbox"><br>
+    <input type="hidden" name="Stripes" value="false"/>
+    <input type="text" name="Emblem" placeholder="Path to your emblem"><br/>
+    <input type="text" name="Action" placeholder="content of Highlighted Text"><br/>
+    <input type="text" name="Message" placeholder="Message (lowest line)"><br/>
+    Text Color:<input type="color" name="TextColor" value="#FFFFFF" /><br/>
+    Border Color:<input type="color" name="BorderColor" value="#000000" /><br/>
+    Action Color:<input type="color" name="ActionColor" value="#DFFF00"/>
+    <script>
+var checkbox = document.querySelector("input[id=stripescheckbox]");
 
+checkbox.addEventListener('change', function() {
+  if (this.checked) {
+    document.querySelector("input[name=Stripes]").value = true
+  } else {
+    document.querySelector("input[name=Stripes]").value = false
+  }
+})
+    </script>
+  </div>
+  <button id="warninggenbutton" style="width: 100%">Generate Warning</button>
+</div>
+<div style="width: 50%; position: absolute; right: 0; height: 100%">
+  <textarea
+    id="warningtextdisplay"
+    style="width: 100%; height: 94%; resize: none"
+    placeholder="this is where the code for your announcement will show."
+  >
+</textarea
+  >
+  <button
+    style="width: 50%; height: 5%"
+    onclick="navigator.clipboard.writeText(document.getElementById('warningtextdisplay').value);"
+  >
+    Copy</button
+  ><button
+    style="width: 50%; height: 5%"
+    onclick="Briefing(JSON.parse(document.getElementById('warningtextdisplay').value))"
+  >
+    Preview
+  </button>
+</div>
+<script>
+
+  warningobject = {};
+  document.getElementById("type").addEventListener("change", function () {
+  introptions = document.getElementById("options");
+  options={
+    "standard": `
+    Stripes:<input type="checkbox" id="stripescheckbox"><br>
+    <input type="hidden" name="Stripes" value="false"/>
+    <input type="text" name="Emblem" placeholder="Path to your emblem"><br/>
+    <input type="text" name="Action" placeholder="content of Highlighted Text"><br/>
+    <input type="text" name="Message" placeholder="Message (lowest line)"><br/>
+    Text Color:<input type="color" name="TextColor" value="#FFFFFF" /><br/>
+    Border Color:<input type="color" name="BorderColor" value="#000000" /><br/>
+    Action Color:<input type="color" name="ActionColor" value="#DFFF00"/>
+    <script>
+        var checkbox = document.querySelector("input[id=stripescheckbox]");
+
+        checkbox.addEventListener('change', function() {
+            if (this.checked) {
+                document.querySelector("input[name=Stripes]").value = true;
+            } else {
+                document.querySelector("input[name=Stripes]").value = false;
+            }
+        });
+        <\\/script>
+  `,
+  "airforce": `
+    <input type="text" name="EmployerName" placeholder="Name of Employer"><br>
+    <input type="text" name="TeamName" placeholder="Name of the Team"><br>
+    <input type="text" name="Callsigns" placeholder="Callsigns (Defined as array)">
+  `}
+  try {
+    introptions.innerHTML = options[this.value]  
+  } catch (error) {
+    introptions.innerHTML = "Error";
+    console.log(error)
+  }
+});
+  document.getElementById("warninggenbutton").onclick = function () {
+    warningobject.type = document.getElementById("type").value
+    //build a list of the inputs and sort them into the object
+    optionvalues = Array.prototype.slice.call(document.getElementById("options").querySelectorAll("input[name]")).concat(Array.prototype.slice.call(document.getElementById("options").querySelectorAll("textarea[name]")));
+    
+    optionvalues.forEach((element) => {
+      try {
+        warningobject[element.name] = JSON.parse(element.value);
+      } catch (error) {
+        warningobject[element.name] = element.value;
+      }
+    });
+    document.getElementById("warningtextdisplay").value = JSON.stringify(
+      warningobject,
+      null,
+      3
+    );
+  };
+</script>
+
+</div>
