--- a/templates/warningeditor.html
+++ b/templates/warningeditor.html
@@ -12,12 +12,14 @@
   <select id="type">
     <option value="standard">Standard</option>
     <option value="airforce">Air Force</option>
+    <option value="meltdown">Meltdown</option>
   </select>
   <h3>Options:</h3>
   <div id="options">
     Stripes:<input type="checkbox" id="stripescheckbox"><br>
     <input type="hidden" name="Stripes" value="false"/>
     <input type="text" name="Emblem" placeholder="Path to your emblem"><br/>
+    <input type="text" name="Title" placeholder="Warning Title"><br/>
     <input type="text" name="Action" placeholder="content of Highlighted Text"><br/>
     <input type="text" name="Message" placeholder="Message (lowest line)"><br/>
     Text Color:<input type="color" name="TextColor" value="#FFFFFF" /><br/>
@@ -59,13 +61,15 @@ checkbox.addEventListener('change', function() {
 </div>
 <script>
 
-  warningobject = {};
+warningobject = {};
   document.getElementById("type").addEventListener("change", function () {
+  warningobject = {};
   introptions = document.getElementById("options");
   options={
     "standard": `
     Stripes:<input type="checkbox" id="stripescheckbox"><br>
     <input type="hidden" name="Stripes" value="false"/>
+    <input type="text" name="Title" placeholder="Warning Title"><br/>
     <input type="text" name="Emblem" placeholder="Path to your emblem"><br/>
     <input type="text" name="Action" placeholder="content of Highlighted Text"><br/>
     <input type="text" name="Message" placeholder="Message (lowest line)"><br/>
@@ -88,7 +92,20 @@ checkbox.addEventListener('change', function() {
     <input type="text" name="EmployerName" placeholder="Name of Employer"><br>
     <input type="text" name="TeamName" placeholder="Name of the Team"><br>
     <input type="text" name="Callsigns" placeholder="Callsigns (Defined as array)">
-  `}
+  `,
+"meltdown":`
+<input type="hidden" name="Stripes" value="false"/>
+    <input type="text" name="Emblem" placeholder="Path to your emblem"><br/>
+    <input type="text" name="Title" placeholder="Warning Title"><br/>
+    <input type="text" name="Action" placeholder="content of Highlighted Text"><br/>
+    <input type="text" name="Message" placeholder="Message (lowest line)"><br/>
+    Text Color:<input type="color" name="TextColor" value="#FFFFFF" /><br/>
+    Border Color:<input type="color" name="BorderColor" value="#000000" /><br/>
+    Action Color:<input type="color" name="ActionColor" value="#DFFF00"/>
+    <textarea name="CornerDisplayText" style="width: 100%;height: 150px;" placeholder="Text That shows in the corner (Defined as Array)"></textarea>
+    <textarea name="HorizontalScrollText" style="width: 100%;height: 150px;" placeholder="Text That scrolls horizontally (Defined as Array)"></textarea>
+`
+}
   try {
     introptions.innerHTML = options[this.value]  
   } catch (error) {
