disabled unfinished layout

--- a/templates/briefingeditor.html
+++ b/templates/briefingeditor.html
@@ -18,7 +18,7 @@
   <h3>Briefing Options:</h3>
   <select id="briefingtype">
     <option value="classic">Classic</option>
-    <option value="corporate">Corporate</option>
+    <!-- <option value="corporate">Corporate</option> -->
   </select>
   <h3>Intro Data:</h3>
   <div id="introoptions"></div>
