--- a/templates/warningeditor.html
+++ b/templates/warningeditor.html
@@ -54,7 +54,7 @@ checkbox.addEventListener('change', function() {
     Copy</button
   ><button
     style="width: 50%; height: 5%"
-    onclick="Briefing(JSON.parse(document.getElementById('warningtextdisplay').value))"
+    onclick="CombatPopup(JSON.parse(document.getElementById('warningtextdisplay').value))"
   >
     Preview
   </button>
