--- a/css/custom.css
+++ b/css/custom.css
@@ -1,21 +1,13 @@
 /* Custom CSS */
-.-emu-layout body.-emu .dialog .dialog-content {
-    padding: 0;
-    padding-block-start:0;
-    }
-    .-emu-layout body.-emu .dialog div.dialog-content{
-    padding-block-start:0;
-    }
-    h1{
-    border-bottom:0;
-    border-block-end-width: 0;}
-    h2{
-    border-bottom:0;
-    border-block-end-width: 0;}
-    .-emu-layout body.-emu #sidebar h1, .-emu-layout body.-emu .dialog h1, .-emu-layout body.-emu .window-app:not(.-emu-clean-sheet) h1{
-        border-block-end-width: 0px;
-    }
-    .-emu-layout body.-emu .dialog div.dialog-content{padding:0;}
-     .no-padding > .window-content { /*i have no idea why this doesn't work*/
-        padding: 0;
-      }
+.tilecontainer > h1.centered {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    border-block-end-style: none;  
+    color: black;
+    position: absolute;  
+}
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap');
