--- a/css/combatwarn.css
+++ b/css/combatwarn.css
@@ -1,4 +1,5 @@
-.centered {position: fixed;
+.centered {
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -46,12 +47,10 @@
 }
 
 .strip {
+  font-family: 'Ubuntu Mono', monospace;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-.strip {
-  font-family: 'Ubuntu Mono', monospace;
   width: 200vw;
   height: fit-content;
   display: flex;
