--- a/css/combatwarn.css
+++ b/css/combatwarn.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap');
 .centered {
   position: fixed;
   top: 50%;
@@ -7,6 +9,20 @@
   color: white;
   border: 16px solid #000000;
   font-family: 'Ubuntu Mono', monospace;
+}
+.centered-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@keyframes flashAndFade {
+  0% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+  }
 }
 
 /* { transition: .75s; }; */ 
@@ -28,8 +44,6 @@
 20% {opacity:0;}
 100% {opacity:0;}
 }
-
- @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap'); /* this is somewhere else */
 /*this is warning stripe css*/
 /* For positioning an element at the top of the screen */
 .top {
