--- a/templates/briefings/layouts/corporate.hbs
+++ b/templates/briefings/layouts/corporate.hbs
@@ -1,5 +1,5 @@
 <div
-id="briefingcontainer"
+id="briefingcontainer{{RandomID}}"
 style="
   height: 100%;
   width: 100%;
@@ -157,7 +157,7 @@ updatetickerElements()
     <div class="ticker">STU 0.88%</div>
     <div class="ticker">LMN 4.09%</div>
     <div class="ticker">OPQ 2.81%</div>
-    <div class="ticker">BM 12.81%</div>
+    <div class="ticker">BMT 12.8%</div>
     <div class="ticker">BCD 1.17%</div>
     <div class="ticker">PQR 1.07%</div>
     <div class="ticker">OPQ 0.96%</div>
