--- a/templates/briefings/settingtemplates/layout/classic.html
+++ b/templates/briefings/settingtemplates/layout/classic.html
@@ -57,4 +57,4 @@
     /><br />
     Text Color:<input type="color" name="TextColor" value="#FFFFFF" /><br />
     Border Color:<input type="color" name="BorderColor" value="#C0C0C0" />
-    <script>addFilePicker(document.querySelector("input[name=ClientLogo]"))</script></div>
+</div>
