--- a/templates/assemblyviewer.html
+++ b/templates/assemblyviewer.html
@@ -40,6 +40,7 @@ background-color: #6C756B;
   handler = {
   Briefing:CallBrief,
   Warning:CallAnnouncement,
+  FrameViewer:CallFrameViewer,
   Document:()=>{console.log("none")}
   }
   function rendertiles() {
