--- a/templates/briefings/intros/logo.hbs
+++ b/templates/briefings/intros/logo.hbs
@@ -1,7 +1,7 @@
-<div id="standby" style="width:100%;height:100%;background-size: 40px 40px;
-  background-image: radial-gradient(circle, {{object.BackgroundAccent}} 1px, rgba(0, 0, 0, 0) 1px);background-color: {{object.BackgroundColor}};font-family: 'Ubuntu Mono', monospace;
-  color: {{object.TextColor}};">
-  <img src="{{object.IntroData.LogoPath}}" alt="" style="height: 60%;
+<div id="standby{{RandomID}}" style="width:100%;height:100%;background-size: 40px 40px;
+  background-image: radial-gradient(circle, {{BackgroundAccent}} 1px, rgba(0, 0, 0, 0) 1px);background-color: {{BackgroundColor}};font-family: 'Ubuntu Mono', monospace;
+  color: {{TextColor}};">
+  <img src="{{IntroData.LogoPath}}" alt="" style="height: 60%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -15,8 +15,8 @@
 
 logoanim = async () => {
   await delay(5000);
-  document.getElementById("standby").style.display="none"
-  document.getElementById("briefingcontainer").style.display="block"
+  document.getElementById("standby{{RandomID}}").style.display="none"
+  document.getElementById("briefingcontainer{{RandomID}}").style.display="block"
 };
 logoanim()
 </script>
