--- a/css/custom.css
+++ b/css/custom.css
@@ -28,3 +28,18 @@
     color: black;
     position: absolute;  
 }
+.redacted span {
+    position: relative;
+    white-space: pre;
+    &:after {
+      background: black;
+      border-radius: 0.1em;
+      box-shadow: 0 0 1px rgba(0,0,0,0.35);
+      content: " ";
+      width: 100%;
+      height: 1.2em;
+      left: 0;
+      position: absolute;
+      transform: skewY(-5deg) rotate(5deg);
+    }
+  }
