Implemented better input reading in All Editors

--- a/templates/briefings/settingtemplates/intro/loadscreen.html
+++ b/templates/briefings/settingtemplates/intro/loadscreen.html
@@ -1,2 +1,2 @@
 <input type="text" name="LoadScreenTitle" placeholder="A Title for the loadscreen.">
-<textarea name="LoadScreenFluff" cols="30" rows="10" placeholder="The fluff that shows during the animation. Defined as an Array."></textarea>
+<textarea name="LoadScreenFluff" cols="30" rows="10" placeholder="The fluff that shows during the animation. One per line." array></textarea>
