--- a/templates/briefings/settingtemplates/layout/classic.html
+++ b/templates/briefings/settingtemplates/layout/classic.html
@@ -32,17 +32,17 @@
     />
     <textarea
       name="DeployedForces"
-      placeholder='Deployed Forces (Defined As Array)'
+      placeholder='Deployed Forces (One per line)'
       style="width: 100%; height: 150px"
     ></textarea>
     <textarea
       name="Objectives"
-      placeholder="Mission Objectives (Defined As Array)"
+      placeholder="Mission Objectives (One per line)"
       style="width: 100%; height: 150px"
     ></textarea>
     <textarea
       name="Notes"
-      placeholder="Mission Notes (Defined As Array)"
+      placeholder="Mission Notes (One per line)"
       style="width: 100%; height: 150px"
     ></textarea>
     Background Color:<input
