--- a/templates/briefings/settingtemplates/intro/directive.html
+++ b/templates/briefings/settingtemplates/intro/directive.html
@@ -1,4 +1,4 @@
 <div style="display: inline"><input style="width: calc(100% - 50px);" type="text" name="LogoPath" filepicker
 placeholder="Path to your Logo"><br /></div>
-<textarea name="TextLines" cols="30" rows="10" placeholder="Text shown during the intro. ['First Thing','Second Thing']"></textarea>
+<textarea name="TextLines" cols="30" rows="10" placeholder="Text shown during the intro. One per line." array></textarea>
 Text Speed:<input type="number" name="TextSpeed" value="5">
