--- a/templates/warnings/settingtemplates/airforce.html
+++ b/templates/warnings/settingtemplates/airforce.html
@@ -1,3 +1,3 @@
 <input type="text" name="EmployerName" placeholder="Name of Employer"><br>
     <input type="text" name="TeamName" placeholder="Name of the Team"><br>
-    <input type="text" name="Callsigns" placeholder="Callsigns (Defined as array)">
+    <textarea array name="Callsigns" placeholder="Callsigns (One per line)"></textarea>
