--- a/templates/warnings/settingtemplates/meltdown.html
+++ b/templates/warnings/settingtemplates/meltdown.html
@@ -6,5 +6,5 @@
     Text Color:<input type="color" name="TextColor" value="#FFFFFF" /><br/>
     Border Color:<input type="color" name="BorderColor" value="#000000" /><br/>
     Action Color:<input type="color" name="ActionColor" value="#DFFF00"/>
-    <textarea name="CornerDisplayText" style="width: 100%;height: 150px;" placeholder="Text That shows in the corner (Defined as Array)"></textarea>
-    <textarea name="HorizontalScrollText" style="width: 100%;height: 150px;" placeholder="Text That scrolls horizontally (Defined as Array)"></textarea>
+    <textarea array name="CornerDisplayText" style="width: 100%;height: 150px;" placeholder="Text That shows in the corner (One per line)"></textarea>
+    <textarea array name="HorizontalScrollText" style="width: 100%;height: 150px;" placeholder="Text That scrolls horizontally (One per line)"></textarea>
