--- a/templates/assemblyviewer.html
+++ b/templates/assemblyviewer.html
@@ -41,7 +41,8 @@ background-color: #6C756B;
   Warning:CallAnnouncement,
   FrameViewer:CallFrameViewer,
   Document:CallOpenDocument,
-  SFX:CallSFX
+  SFX:CallSFX,
+  DEBUG_EVAL:CallEval
 }
   function rendertiles() {
     container = document.getElementById("tilecontainer")
