--- a/templates/briefings/briefing.hbs
+++ b/templates/briefings/briefing.hbs
@@ -1,3 +1,5 @@
+<wrapper>
+  {{!-- if i could decide this would not be here  --}}
 <script>
 briefs = document.getElementsByTagName("briefing")
 briefs = Array.prototype.slice.call(briefs)
@@ -13,3 +15,4 @@ list=Array.from(document.getElementsByClassName("typed{{RandomID}}"))
   }).go();})
 </script>
 <briefing>{{{html}}}</briefing>
+</wrapper>
